public enum InternshipStatus { PENDING, APPROVED, REJECTED, FILLED }