package com.internshipapp.enums;

public enum ApplicationStatus {
    PENDING,
    APPROVED,
    ACCEPTED,
    UNSUCCESSFUL
}