package com.internshipapp.models;

import com.internshipapp.enums.*;

public class CareerCenterStaff extends User {
    public CareerCenterStaff(String userID, String name, String password, String staffDepartment) {
        super(userID, name, password);
    }

    public void authorizeCompanyRep(CompanyRepresentative rep, boolean isAuthorized) {
        // Logic to authorize or deauthorize a company representative
        rep.setApproved(isAuthorized);
    }

    public void approveInternship(Internship internship) {
        // Logic to approve or reject an internship
        internship.setStatus(InternshipStatus.APPROVED);
    }

    public void rejectInternship(Internship internship, boolean isRejected) {
        // Logic to reject an internship
        internship.setStatus(InternshipStatus.REJECTED);
    }

    public void approveWithdrawal(WithdrawalRequest request, boolean isApproved) {
        // Logic to approve or reject a withdrawal request
        request.setStatus(isApproved ? RequestStatus.APPROVED : RequestStatus.REJECTED);
    }

    public void rejectWithdrawal(WithdrawalRequest request, boolean isRejected) {
        // Logic to reject a withdrawal request
        request.setStatus(isRejected ? RequestStatus.REJECTED : RequestStatus.APPROVED);
    }

    public Report generateReport(String filters) {
        // Logic to generate a report based on filters
        return new Report(filters); // Placeholder return
    }
}