package com.internshipapp.ui;

//import com.internshipapp.models.User;

public interface UserMenu {
    void displayMenu();
    //void displayMenu(Object user);
}